tests/sawn/fixtures/invalid/38_whitespace_around_table_comma.sawn
// §3.5: No whitespace around commas in header or data rows
data[][] name , age
  "Alice",30
